fix(uw-common): 修复 IP 范围合并逻辑并优化相关方法
- 修复 IP范围合并逻辑中的比较方法
- 优化 mergeEnd 方法，避免不必要的数组拷贝
- 修改 isOverlappingOrAdjacent 方法，提高效率
- 更新单元测试用例，确保正确性